<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeDetailsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="10dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endGuidLine"
        app:layout_constraintGuide_end="10dp"
        android:orientation="vertical"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Employee Details"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/backArrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title="Employee Details"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"

        />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        app:layout_constraintEnd_toEndOf="@+id/endGuidLine"
        />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        />
    <EditText
        android:id="@+id/editPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Phone"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuidLine"
        />

    <TextView
        android:id="@+id/mailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Mail"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editPhone"
        android:layout_marginTop="@dimen/text_size_medium"
        />

    <EditText
        android:id="@+id/editMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/mailLabel"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuidLine"
        />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editMail"
        android:layout_marginTop="@dimen/text_size_medium"
        />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/addressLabel"
        app:layout_constraintEnd_toEndOf="@+id/endGuidLine"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        />

    <TextView
        android:id="@+id/pin_codeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pinCode"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editAddress"
        android:layout_marginTop="@dimen/text_size_medium"
        />

    <EditText
        android:id="@+id/editPinCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pincode"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintTop_toBottomOf="@+id/pin_codeLabel"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuidLine"
        />
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editPinCode"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuidLine"
        >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>